--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ task4/front-end/softy-pinko-front-end
 task5/front-end/softy-pinko-front-end
 task6/front-end/softy-pinko-front-end
 task5/front-end/softy-pinko-front-end
+task5/front-end/softy-pinko-front-end
+task4/front-end/softy-pinko-front-end
+task4/front-end/softy-pinko-front-end
